<resources>
    <string name="app_name">Medicine HalfLife</string>
    <string name="drug_name_label">Drug:</string>
    <string name="half_life_label">Half-life:</string>
    <string name="graph">Graph</string>
    <string name="custom_drug_textview_label">Custom drug, input half-life</string>
    <string name="repeated_dose">Repeated Dose</string>
    <string name="single_dose">Single Dose</string>
    <string name="dosage_textview_label">Dosage:</string>
    <string name="init_dosage">500</string>
    <string name="every_label">Every</string>

    <string-array name="drug_names">
        <item>Acetaminophen</item>
        <item>Dextromethorphan</item>
    </string-array>

    <string-array name="drug_half_life_values">
        <item>180</item>
        <item>240</item>
    </string-array>

    <string-array name="dosage_units">
        <item>mg</item>
        <item>g</item>
        <item>μg</item>
    </string-array>

    <string-array name="half_life_units">
        <item>minutes</item>
        <item>hours</item>
        <item>days</item>
    </string-array>

    <string name="action_graph">Graph</string>
    <string name="action_settings">Settings</string>
    <string name="action_database_title">Drugs</string>

    <string name="webview_height">350</string>
    <string name="webview_width">350</string>
    <string name="initial_dosage_value">500</string>
    <string name="drug_name_hint">Search here</string>
    <string name="drug_search_description">Search for drug names here:</string>
    <string name="input_for_the_half_life_description">Input for the half-life</string>
    <string name="spinner_for_choosing_the_half_life_unit_description">Spinner for choosing the half-life unit</string>
    <string name="custom_drug_text">Custom Drug</string>
    <string name="add_drug_name_hint">Drug Name</string>
    <string name="add_drug_save_button">Save</string>
    <string name="minutes_hours_days_hint">(minutes/hours/days)</string>
    <string name="half_life_new_drug_hint">Half-life</string>
    <string name="edit_drug_save_button">Save</string>


</resources>
