...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dosage_card">

        <WebView
            android:id="@+id/webview_graph"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </androidx.cardview.widget.CardView>

...
