...
            app:layout_constraintBottom_toTopOf="@id/every_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dosage_radio_group" />

        <EditText
            android:id="@+id/dosage_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:inputType="number"
            android:paddingStart="16dp"
...
